# fast_api_cource

./: .env  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
app/: config.py  database.py  main.py
app/bookings/: models.py  router.py
app/hotels/: models.py
app/migrations/: env.py
app/rooms/: models.py
app/users/: models.py
configs/: api_log_config.ini
deployment/: Dockerfile.api  Dockerfile.dev
