[tool.poetry]
name = "fast-api-cource"
version = "0.1.0"
description = ""
authors = ["Dima"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12.7"
celery = "^5.4.0"
fastapi = {extras = ["all"], version = "^0.115.5"}
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
